# MeLearnC

./: CMakeLists.txt  README.md
shaders/: cube.vert
src/: cube.c  cube.h  shader.c  window.c
src/core/: frameRate.c  frameRate.h  types.h
src/shaders/: cube.vert
src/utils/: shader.c  shader.h  texture.c  texture.h
